RESOLVED FIXED271288
REGRESSION (275503@main): Autocorrection candidates fail to insert text when the selection is collapsed
https://bugs.webkit.org/show_bug.cgi?id=271288
Summary REGRESSION (275503@main): Autocorrection candidates fail to insert text when ...
Wenson Hsieh
Reported 2024-03-19 17:41:33 PDT
Attachments
Wenson Hsieh
Comment 1 2024-03-19 18:18:00 PDT
EWS
Comment 2 2024-03-19 22:26:10 PDT
Committed 276385@main (e9f9c8bd018f): <https://commits.webkit.org/276385@main> Reviewed commits have been landed. Closing PR #26165 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.